--- a/website/website/templates/index.html
+++ b/website/website/templates/index.html
@@ -178,7 +178,31 @@
                     {% for result in results %}
                     <tr>
                       <td>{{result.LegalDocument.value}}</td>
-                      <td>{{result.status_value.value}}</td>
+                      <td>
+                        {%if result.status_value.value == "active" %}
+
+                        <button
+                          type="button"
+                          class="btn btn-success position-relative"
+                        >
+                          <span>{{result.status_value.value}}</span>
+                        </button>
+                        {%elif result.status_value.value == "closed" %}
+                        <button
+                          type="button"
+                          class="btn btn-danger position-relative"
+                        >
+                          <span>{{result.status_value.value}}</span>
+                        </button>
+                        {%else%}
+                        <button
+                          type="button"
+                          class="btn btn-primary position-relative"
+                        >
+                          <span>{{result.status_value.value}}</span>
+                        </button>
+                        {%endif%}
+                      </td>
                       <td>{{result.Status.value}}</td>
                     </tr>
                     {% endfor %}
